# Gait-40-DOF-22-Musc-Sagittal

./: .gitignore  README.md  pyproject.toml  test.py
gait_40_dof_22_musc_sagittal/: MUJOCO_LOG.TXT  __init__.py  sagittal_walking_env.py
gait_40_dof_22_musc_sagittal/model/: 2d.xml
gait_40_dof_22_musc_sagittal/model/Converted/: hat_ribs.stl
